Modernize build configuration and fix deprecated code patterns
Co-authored-by: Kaleaon <193536720+Kaleaon@users.noreply.github.com>